fixing moles not showing

--- a/training_web_react/src/Components/Mole/Mole.sass
+++ b/training_web_react/src/Components/Mole/Mole.sass
@@ -2,6 +2,7 @@
   cursor: url('../../imgs/hammer.png'), auto !important
   background: url('../../imgs/mole.svg') bottom center no-repeat
   background-size: $value
+  position: absolute
   top: 100%
   width: 100%
   height: 100%
